examples/v0.2/errors/constant_reassignment.nova
// Expected Error:
// Cannot reassign immutable variable.

PI:: N = 3.14159

PI = 4